--- a/ui/ui-tabs/ui-tabs.html
+++ b/ui/ui-tabs/ui-tabs.html
@@ -18,7 +18,7 @@
     <h2>Object properties</h2>
     <ul>
       <li>
-        title - required.<br>
+        label - required.<br>
         The text displayed in the tab.
       </li>
       <li>
