--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <meta charset="utf-8">
 <link rel="icon" href="data:,">
 <meta name="viewport" content="width=device-width">
+<script>
+  const theme = localStorage.getItem('theme');
+  if(theme) document.documentElement.dataset.theme = theme
+  else document.documentElement.dataset.theme = 'dark';
+</script>
+
 <link rel="stylesheet" href="./theme/theme.css">
 <link rel="stylesheet" href="./ui/ui-styles.css">
 <title>Web Components</title>
@@ -13,6 +19,7 @@
 <div id="app">
 
   <div role="navigation">
+<button id="toggle-theme">Theme</button>
     <nav>
       <div class="static">
         <span class="ui-version"><span>
@@ -53,6 +60,15 @@
 
   <article id="article"></article>
 </div>
+<script>
+  const btn = document.getElementById('toggle-theme');
+  btn.addEventListener('click', () => {
+    const current = document.documentElement.dataset.theme;
+    const newTheme = current === 'dark' ? 'light' : 'dark';
+    document.documentElement.dataset.theme = newTheme;
+    localStorage.setItem('theme', newTheme);
+  });
+</script>
 
 <ui-portal></ui-portal>
 <script type="module">
