--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 <link rel="icon" href="data:,">
 <meta name="viewport" content="width=device-width">
 <script>
-  const theme = localStorage.getItem('theme');
-  if(theme) document.documentElement.dataset.theme = theme
-  else document.documentElement.dataset.theme = 'dark';
+  const theme = localStorage.getItem('theme') || 'dark';
+  document.documentElement.dataset.theme = theme;
 </script>
 
 <link rel="stylesheet" href="./theme/theme.css">
+<link rel="stylesheet" href="" id="theme-style">
+
+<script>
+  document.getElementById('theme-style').href = `./theme/theme-${theme}.css`;
+</script>
+
 <link rel="stylesheet" href="./ui/ui-styles.css">
 <title>Web Components</title>
 </head>
@@ -62,11 +67,14 @@
 </div>
 <script>
   const btn = document.getElementById('toggle-theme');
+  const themeLink = document.getElementById('theme-style');
+
   btn.addEventListener('click', () => {
     const current = document.documentElement.dataset.theme;
     const newTheme = current === 'dark' ? 'light' : 'dark';
     document.documentElement.dataset.theme = newTheme;
     localStorage.setItem('theme', newTheme);
+    themeLink.href = `./theme/theme-${newTheme}.css`;
   });
 </script>
 
