--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -1,45 +1,26 @@
 <section class="intro">
   <h1>Foundation</h1>
-  <div class="description">Key fundamental capabilities of the UI library.</div>
+  <p>Key fundamental capabilities of the UI library.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Architecture</h2>
-    <ul>
-      <li>
-        The library does not use Shadow DOM.
-      </li>
-      <li>
-        No internal CSS class names are required or exposed.
-      </li>
-      <li>
-        Text direction (LTR/RTL) inherits from the parent or system unless overridden.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Styling</h2>
-    <ul>
-      <li>
-        All components are easily customizable via CSS.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Attributes</h2>
-    <ul>
-      <li>
-        ARIA attributes reflect the correct roles and component states.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Accessibility</h2>
-    <ul>
-      <li>
-        Interactive elements support keyboard navigation: Tab to move forward, Shift + Tab to move backward, Enter or Space to trigger actions, and arrow keys where contextually relevant (e.g., in tabs, sliders).
-      </li>
-    </ul>
-  </div>
+  <h2>Architecture</h2>
+  <p>The library does not use Shadow DOM.</p>
+  <p>No internal CSS class names are required or exposed.</p>
+  <p>Text direction (LTR/RTL) inherits from the parent or system unless overridden.</p>
+</section>
+
+<section class="details">
+  <h2>Styling</h2>
+  <p>All components are easily customizable via CSS.</p>
+</section>
+
+<section class="details">
+  <h2>Attributes</h2>
+  <p>ARIA attributes reflect the correct roles and component states.</p>
+</section>
+
+<section class="details">
+  <h2>Accessibility</h2>
+  <p>Interactive elements support keyboard navigation: Tab to move forward, Shift + Tab to move backward, Enter or Space to trigger actions, and arrow keys where contextually relevant (e.g., in tabs, sliders).</p>
 </section>
