--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,20 +1,12 @@
 <section class="intro">
   <h1>Icons</h1>
-  <div class="description">A collection of icons.</div>
+  <p>A collection of icons.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Info</h2>
-      <span>The library uses <a href="https://fonts.google.com/icons" target="_blank">Material Symbols</a> icons.</span>
-      <ul>
-        <li>Fill: Yes</li>
-        <li>Weight: 400</li>
-        <li>Grade: 0</li>
-        <li>Optical size: 24</li>
-        <li>Style: Rounded</li>
-      </ul>
-  </div>
+  <h2>Info</h2>
+  <p>The library uses <a href="https://fonts.google.com/icons" target="_blank">Material Symbols</a> icons.</p>
+  <p>Fill: Yes | Weight: 400 | Grade: 0 | Optical size: 24 | Style: Rounded</p>
 </section>
 
 <section class="content">
@@ -30,7 +22,7 @@
     <div>Loaders & Spinners</div>
     <div class="icons">
       <div class="icon-card">
-        <ui-icon icon="progress-activity"></ui-icon>
+        <ui-icon name="progress-activity"></ui-icon>
         <div class="icon-name">progress-activity</div>
       </div>
     </div>
@@ -42,7 +34,7 @@
     function iconCard(name){
       return `
         <div class="icon-card">
-          <ui-icon icon="${name}"></ui-icon>
+          <ui-icon name="${name}"></ui-icon>
           <div class="icon-name">${name}</div>
         </div>
       `;
@@ -56,10 +48,10 @@
       'delete',
       'notifications',
       'settings',
-      'add',
+      'add-2',
       'add-circle',
-      'cross',
-      'cross-circle',
+      'close',
+      'cancel',
       'check',
       'check-circle',
       'info',
