--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Icons</h1>
-  <p>A collection of icons.</p>
+  <p>A collection of system icons included with the library.</p>
 </section>
 
 <section class="details">
