--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline';">
 <link rel="icon" href="data:,">
 <meta name="viewport" content="width=device-width">
 <script>
@@ -9,7 +10,7 @@
   document.documentElement.dataset.theme = theme;
 </script>
 
-<link rel="stylesheet" href="./theme/theme.css">
+<link rel="stylesheet" href="./theme/theme.css?v=1">
 <link rel="stylesheet" href="" id="theme-style">
 
 <script>
