--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';">
 <link rel="icon" href="data:,">
 <meta name="viewport" content="width=device-width">
 <script>
@@ -10,7 +9,7 @@
   document.documentElement.dataset.theme = theme;
 </script>
 
-<link rel="stylesheet" href="./theme/theme.css?v=1">
+<link rel="stylesheet" href="./theme/theme.css">
 <link rel="stylesheet" href="" id="theme-style">
 
 <script>
