--- a/index.html
+++ b/index.html
@@ -112,5 +112,6 @@
 </script>
 <script type="module" src="./theme/router.js"></script>
 <script type="module" src="./ui/components.js"></script>
+<script src="./theme/examples.js"></script>
 </body>
 </html>
