--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="nav-category" data-nav-category="components">
           <div class="menu-title">Components</div>
         </div>
-  <!-- portal, observer, resize-handler, mount-detector -->
+  <!-- portal, focus, observer, resize-handler -->
         <div class="nav-category" data-nav-category="utilities">
           <div class="menu-title">Utilities</div>
         </div>
