--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -6,8 +6,8 @@
 <section class="details">
   <h2>Architecture</h2>
   <p>The library does not use Shadow DOM.</p>
-  <p>No internal CSS class names are required or exposed.</p>
-  <p>Text direction (LTR/RTL) inherits from the parent or system unless overridden.</p>
+  <p>CSS classes are not used.</p>
+  <p>Text direction (LTR/RTL) inherits from the parent.</p>
 </section>
 
 <section class="details">
@@ -22,5 +22,5 @@
 
 <section class="details">
   <h2>Accessibility</h2>
-  <p>Interactive elements support keyboard navigation: Tab to move forward, Shift + Tab to move backward, Enter or Space to trigger actions, and arrow keys where contextually relevant (e.g., in tabs, sliders).</p>
+  <p>Interactive elements support keyboard navigation: Tab to move forward, Shift + Tab to move backward, Enter or Space to trigger actions, and arrow keys where contextually relevant (e.g., in tabs).</p>
 </section>
