--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
     <nav>
       <div class="static">
-        <span class="version"><span>
+        <span class="version"></span>
+        <ui-button id="toggle-theme">
+          <ui-icon name=""></ui-icon>
+        </ui-button>
       </div>
       <div class="dynamic">
         <div class="nav-category" data-nav-category="essentials">
@@ -58,15 +61,12 @@
         </div>
   <!-- -->
       </div>
-      <div class="static"></div>
+      <div class="static">
+      </div>
     </nav>
 
     <main>
-      <header>
-        <ui-button id="toggle-theme">
-          <ui-icon name=""></ui-icon>
-        </ui-button>
-      </header>
+      <header></header>
 
       <article id="article"></article>
 
