--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <link rel="stylesheet" href="./styles/core/reset.css">
 <link rel="stylesheet" href="./styles/core/base.css">
 <link rel="stylesheet" href="./styles/core/typography.css">
-<link rel="stylesheet" href="./styles/core/layout.css">
+<!--<link rel="stylesheet" href="./styles/core/layout.css">-->
+<link rel="stylesheet" href="./styles/layouts/layout.css">
 <link rel="stylesheet" href="" id="theme-style">
 <script>
   document.getElementById('theme-style').href = `./styles/themes/${window.theme}.css`;
 </script>
-<link rel="stylesheet" href="./styles/core/app.css">
+<link rel="stylesheet" href="./styles/parts/app.css">
 <link rel="stylesheet" href="./ui/styles/core.css">
 <link rel="icon" href="data:,">
 <title>Web Components</title>
@@ -23,15 +24,9 @@
 <body>
 <ui-focus></ui-focus>
 <ui-app>
-  <div class="container">
 
+  <ui-sidebar>
     <nav>
-      <div class="static">
-        <span class="version"></span>
-        <ui-button id="toggle-theme">
-          <ui-icon name=""></ui-icon>
-        </ui-button>
-      </div>
       <div class="dynamic">
         <div class="nav-category" data-nav-category="essentials">
           <div class="menu-title">Essentials</div>
@@ -62,19 +57,17 @@
         </div>
   <!-- -->
       </div>
-      <div class="static">
-      </div>
     </nav>
+  </ui-sidebar>
 
+  <ui-content>
 
     <main>
       <article id="article"></article>
     </main>
-    <header></header>
-    <aside></aside>
-    <footer></footer>
+    <footer>Footer</footer>
+  </ui-content>
 
-  </div>
 </ui-app>
 <ui-portal></ui-portal>
 
@@ -107,6 +100,7 @@
   version.forEach(v => {
     v.textContent = UIVersion;
   });
+  document.documentElement.dataset.version = UIVersion;
 </script>
 <script type="module" src="./theme/router.js"></script>
 <script type="module" src="./ui/components.js"></script>
