--- a/index.html
+++ b/index.html
@@ -26,46 +26,51 @@
 <ui-app>
 
   <ui-sidebar>
+    <div>
+      <span class="version"></span>
+    </div>
     <nav>
-      <div class="dynamic">
-        <div class="nav-category" data-nav-category="essentials">
-          <div class="menu-title">Essentials</div>
-        </div>
-  <!-- variant, tone, elevation, radius -->
-        <div class="nav-category" data-nav-category="theme">
-          <div class="menu-title">Theme</div>
-        </div>
-  <!-- stack, grid, container, section, split -->
-        <div class="nav-category" data-nav-category="layout">
-          <div class="menu-title">Layout</div>
-        </div>
-  <!-- divider, icon, line, spacer, text -->
-        <div class="nav-category" data-nav-category="primitives">
-          <div class="menu-title">Primitives</div>
-        </div>
-  <!-- button, input, select, modal, tooltip -->
-        <div class="nav-category" data-nav-category="forms">
-          <div class="menu-title">Forms</div>
-        </div>
-  <!-- accordion, tabs, breadcrumb,  -->
-        <div class="nav-category" data-nav-category="components">
-          <div class="menu-title">Components</div>
-        </div>
-  <!-- portal, focus, observer, resize-handler -->
-        <div class="nav-category" data-nav-category="utilities">
-          <div class="menu-title">Utilities</div>
-        </div>
-  <!-- -->
+      <div class="nav-category" data-nav-category="essentials">
+        <div class="menu-title">Essentials</div>
       </div>
+<!-- variant, tone, elevation, radius -->
+      <div class="nav-category" data-nav-category="theme">
+        <div class="menu-title">Theme</div>
+      </div>
+<!-- stack, grid, container, section, split -->
+      <div class="nav-category" data-nav-category="layout">
+        <div class="menu-title">Layout</div>
+      </div>
+<!-- divider, icon, line, spacer, text -->
+      <div class="nav-category" data-nav-category="primitives">
+        <div class="menu-title">Primitives</div>
+      </div>
+<!-- button, input, select, modal, tooltip -->
+      <div class="nav-category" data-nav-category="forms">
+        <div class="menu-title">Forms</div>
+      </div>
+<!-- accordion, tabs, breadcrumb,  -->
+      <div class="nav-category" data-nav-category="components">
+        <div class="menu-title">Components</div>
+      </div>
+<!-- portal, focus, observer, resize-handler -->
+      <div class="nav-category" data-nav-category="utilities">
+        <div class="menu-title">Utilities</div>
+      </div>
+<!-- -->
     </nav>
   </ui-sidebar>
 
   <ui-content>
-
+    <header>
+      <ui-button id="toggle-theme">
+        <ui-icon name=""></ui-icon>
+      </ui-button>
+    </header>
     <main>
       <article id="article"></article>
     </main>
-
+    <footer></footer>
   </ui-content>
 
 </ui-app>
