--- a/index.html
+++ b/index.html
@@ -30,34 +30,35 @@
       <span class="version"></span>
     </div>
     <nav>
-      <div class="nav-category" data-nav-category="essentials">
-        <div class="menu-title">Essentials</div>
-      </div>
-<!-- variant, tone, elevation, radius -->
-      <div class="nav-category" data-nav-category="theme">
-        <div class="menu-title">Theme</div>
-      </div>
-<!-- stack, grid, container, section, split -->
-      <div class="nav-category" data-nav-category="layout">
-        <div class="menu-title">Layout</div>
-      </div>
-<!-- divider, icon, line, spacer, text -->
-      <div class="nav-category" data-nav-category="primitives">
-        <div class="menu-title">Primitives</div>
-      </div>
-<!-- button, input, select, modal, tooltip -->
-      <div class="nav-category" data-nav-category="forms">
-        <div class="menu-title">Forms</div>
-      </div>
-<!-- accordion, tabs, breadcrumb,  -->
-      <div class="nav-category" data-nav-category="components">
-        <div class="menu-title">Components</div>
-      </div>
-<!-- portal, focus, observer, resize-handler -->
-      <div class="nav-category" data-nav-category="utilities">
-        <div class="menu-title">Utilities</div>
-      </div>
-<!-- -->
+      <ul>
+        <li class="nav-category" data-nav-category="essentials">
+          <div class="menu-title">Essentials</div>
+        </li>
+  <!-- variant, tone, elevation, radius -->
+        <li class="nav-category" data-nav-category="theme">
+          <div class="menu-title">Theme</div>
+        </li>
+  <!-- stack, grid, container, section, split -->
+        <li class="nav-category" data-nav-category="layout">
+          <div class="menu-title">Layout</div>
+        </li>
+  <!-- divider, icon, line, spacer, text -->
+        <li class="nav-category" data-nav-category="primitives">
+          <div class="menu-title">Primitives</div>
+        </li>
+  <!-- button, input, select, modal, tooltip -->
+        <li class="nav-category" data-nav-category="forms">
+          <div class="menu-title">Forms</div>
+        </li>
+  <!-- accordion, tabs, breadcrumb,  -->
+        <li class="nav-category" data-nav-category="components">
+          <div class="menu-title">Components</div>
+        </li>
+  <!-- portal, focus, observer, resize-handler -->
+        <li class="nav-category" data-nav-category="utilities">
+          <div class="menu-title">Utilities</div>
+        </li>
+      </ul>
     </nav>
   </ui-sidebar>
 
