--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </ui-button>
     </header>
     <main>
-      <article id="article"></article>
+      <article></article>
     </main>
     <footer></footer>
   </ui-content>
