--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <ui-main>
       <header>
-        <ui-button id="toggle-theme">
+        <ui-button id="toggle-theme" shape="square">
           <ui-icon name=""></ui-icon>
         </ui-button>
       </header>
