--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
       </div>
       <nav>
         <ul>
+    <!-- essentials -->
           <li class="nav-category" data-nav-category="essentials">
             <div class="menu-title">Essentials</div>
+          </li>
+    <!-- design tokens -->
+          <li class="nav-category" data-nav-category="tokens">
+            <div class="menu-title">Design Tokens</div>
           </li>
     <!-- variant, tone, elevation, radius -->
           <li class="nav-category" data-nav-category="theme">
