--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <ui-main>
       <header>
-        <ui-button id="toggle-theme" shape="square">
+        <ui-button id="toggle-theme" shape="square" size="small">
           <ui-icon name=""></ui-icon>
         </ui-button>
       </header>
