--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <script>
   document.getElementById('theme-style').href = `./ui/styles/themes/${window.theme}.css`;
 </script>
-<link rel="stylesheet" href="./assets/app.css">
 <link rel="stylesheet" href="./ui/styles/core.css">
+<link rel="stylesheet" href="./assets/app.css">
+<link rel="stylesheet" href="./ui/styles/components.css">
 <link rel="icon" href="data:,">
 <title>Web Components</title>
 </head>
