--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     <ui-main>
       <header>
         <ui-button id="toggle-theme" shape="square" size="small">
-          <ui-icon name=""></ui-icon>
+          <button>
+            <ui-icon name=""></ui-icon>
+          </button>
         </ui-button>
       </header>
       <main>
